--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
 .board {
     background-color: var(--white);
     border: none;
+    position: relative;
     display: grid;
     gap: 1px;
     grid-template-columns: repeat(8, var(--box-length));
@@ -92,4 +93,21 @@ body {
 #green-count, .green {
     color: var(--green);
 }
+
+.game-over {
+    font-size: xx-large;
+    font-weight: bold;
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(10px);
+}
+
+.hidden {
+    display: none;
+}
+
 
